--- a/reseni/skolstvi.html
+++ b/reseni/skolstvi.html
@@ -140,7 +140,7 @@ layout: default
               </div>
 
               <div class="medium-12 pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="uvodni.html">Zpět</a>
+                  <a class="pce-hero__cta-item button large" href="./">Zpět</a>
               </div>
             </article>         
           </div>
