--- a/reseni/socialni-dopady.html
+++ b/reseni/socialni-dopady.html
@@ -166,14 +166,13 @@ layout: default
   <li>V každém případě je nutné u změnových i nových případů rozšiřovat možnosti dálkového podávání.</li>
   <li>Lze uvažovat i o úplném uzavření poboček pro fyzickém návštěvy a testování kombinace email (bez elektronického podpisu) - telefon - schránka z vnějšku budov ÚP.</li>
 </ul>
-              </div>
-           </div>     
 
+                </div>
+              </div>
 <hr/>
 
               <div class="row">
-                <div class="columns medium-6">                  
-
+                <div class="columns medium-6">
                   <h3>Co prosazují Piráti:</h3>
 
                   <table>
@@ -188,7 +187,7 @@ layout: default
 <tr><td>Podpora pro OBZP.</td></tr>
 <tr><td>Nastavit pravidla pro fungování nocleháren, azylových domů apod.</td></tr>
 <tr><td>Opatření na podporu dětí, jejichž rodiče byli hospitalizováni. ?</td></tr>
-<tr><td>Podpora pro lidi s PAS, duševním onemocněním, závislostmi. ?</td></tr>                      
+<tr><td>Podpora pro lidi s PAS, duševním onemocněním, závislostmi. ?</td></tr>   
                     </tbody>
                   </table>
                 </div>
@@ -196,7 +195,7 @@ layout: default
                 <div class="columns medium-6">
                 <h3>Články k tématu:</h3>
 
-                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","sociální dopady"  %}
+                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","zdravotnictví"  %}
 
                   <ul>
                   {% for post in sorted-posts %}
@@ -216,5 +215,3 @@ layout: default
     </div>
   </div>
 </div>
-
- 
