--- a/reseni/socialni-dopady.html
+++ b/reseni/socialni-dopady.html
@@ -195,7 +195,7 @@ layout: default
                 <div class="columns medium-6">
                 <h3>Články k tématu:</h3>
 
-                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","zdravotnictví"  %}
+                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","sociální dopady"  %}
 
                   <ul>
                   {% for post in sorted-posts %}
