--- a/reseni/index.html
+++ b/reseni/index.html
@@ -77,6 +77,10 @@ layout: default
 
 <hr/>
 
+<a href="https://www.pirati.cz/vysledky/#type=koronavirus&datefilter6=all" target="_blank" rel="noopener">Přehled toho nejdůležitějšího, na čem Piráti pracují nejen v Poslanecké sněmovně</a>
+
+<hr/>
+
 <div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
     <div class="row" style="text-align: center">
@@ -132,10 +136,7 @@ layout: default
           </div>
         </section>
       </div>
-    </div>
-  </div>
-</div>
-
+  
 <hr/>
 
 <div class="row" style="text-align: center">
