--- a/reseni/index.html
+++ b/reseni/index.html
@@ -77,8 +77,11 @@ layout: default
 
 <hr/>
 
+<div class="row" style="text-align: center">
+  <div class="small-12 medium-2 medium-offset-1 columns">
 <a href="https://www.pirati.cz/vysledky/#type=koronavirus&datefilter6=all" target="_blank" rel="noopener">Přehled toho nejdůležitějšího, na čem Piráti pracují nejen v Poslanecké sněmovně</a>
-
+ </div>
+  
 <hr/>
 
 <div class="row" style="text-align: center">
