--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@ Nabízíme [**rozcestník**](/rozcestnik/), který vám hledání usnadní - naj
 
 Podívejte se i na [**návrhy Pirátů**](/reseni/), jak by věci měly nebo mohly fungovat během krize lépe než nyní! 
 
+<a href="https://www.pirati.cz/vysledky/#type=koronavirus&datefilter6=all" target="_blank" rel="noopener"><strong>Přehled toho nejdůležitějšího, na čem Piráti pracují nejen v Poslanecké sněmovně</strong></a>
+
 {% endcapture %}
 
 <div class="row">
