--- a/reseni/index.html
+++ b/reseni/index.html
@@ -396,7 +396,7 @@ layout: default
 <div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
     
-    <div class="l-program__lead"><a href="https://www.pirati.cz/vysledky/#type=koronavirus&datefilter6=all" target="_blank" rel="noopener">Přehled toho nejdůležitějšího, na čem Piráti pracují nejen v Poslanecké sněmovně</a></div>
+    <div class="l-program__lead"><strong><a href="https://www.pirati.cz/vysledky/#type=koronavirus&datefilter6=all" target="_blank" rel="noopener">Přehled toho nejdůležitějšího, na čem Piráti pracují nejen v Poslanecké sněmovně</a></strong></div>
   </div>
 </div>
   
