--- a/reseni/exekuce.html
+++ b/reseni/exekuce.html
@@ -52,7 +52,7 @@ layout: default
               <div class="row">
                 <div class="l-prg__content columns medium-12 text-left pull-right">
 
-<p>Vyzýváme Ministerstvo práce a sociálních věcí, aby posílilo Úřady práce, které v této chvíli nestíhají vyplácet příspěvky. Nadále upozorňujeme, že v regionech se silnou koncentrací dlužníků může dojít vlivem zhroucení černého pracovního trhu k masivním sociálním problémům, které mohou přerůst až v občanské nepokoje a rabování. Vládě České republiky doporučujeme, aby si pro tyto krizové případy přichystala plán a zároveň doporučujeme několik opatření, které by mohly eskalaci situace předejít.</p>
+<p>Vyzýváme Ministerstvo práce a sociálních věcí, aby posílilo Úřady práce, které v této chvíli nestíhají vyplácet příspěvky. Nadále upozorňujeme, že v regionech se silnou koncentrací dlužníků může dojít vlivem zhroucení černého pracovního trhu k masivním sociálním problémům, které mohou přerůst až v občanské nepokoje a rabování. Vládě České republiky doporučujeme, aby si pro tyto krizové případy přichystala plán a zároveň doporučujeme několik opatření, které by mohly eskalaci situace předejít. Podrobnosti k dlouhodobému záměru si můžete přečíst na webových stránkách exekuce.pirati.cz<a href="https://exekuce.pirati.cz/?fbclid=IwAR2DfOCjwYoBx_OUjon7JECwWt3qlOvVdAkqo3gBDtMV2KWQgrpjlJniIp0" target="_blank" rel="noopener"><strong>exekuce.pirati.cz</strong></a></p>
                              
 <h4>Dluhy</h4>
 
