--- a/kraje/praha/index.html
+++ b/kraje/praha/index.html
@@ -1,13 +1,13 @@
 ---
 layout: default
-title: Aktuality
-description: Nejnovější články a příspěvky. Vše podstatné na jednom místě.
+title: Praha
+description: Praha
 keywords: články, aktuality, příspěvky, novinky
 pagination: 
   enabled: true
   permalink: /:num/
   enabled: true
-  #tag: koronavirus
+  tag: Praha
   per_page: 12
   permalink: /:num/
   sort_field: 'date'
@@ -24,7 +24,9 @@ pagination:
             <h1 itemprop="headline" class="c-page-title">{{ page.title }}</h1>
           </header>
           {% assign posts = paginator.posts %}
-          {% include articles/list-responsive.html posts=posts %}
+          {% for article in posts %}
+            {% include articles/horizontal-article.html article=article %}
+          {% endfor %}          
           {% include articles/pagination.html paginator=paginator %}
       </div>
     </div>
