--- a/kraje/jihocesky/index.html
+++ b/kraje/jihocesky/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Praha
-description: Praha
+title: Jihočeský kraj
+description: Jihočeský kraj
 keywords: články, aktuality, příspěvky, novinky
 pagination: 
   enabled: true
