--- a/kraje/jihomoravsky/index.html
+++ b/kraje/jihomoravsky/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Praha
-description: Praha
+title: Jihomoravský kraj
+description: Jihomoravský kraj
 keywords: články, aktuality, příspěvky, novinky
 pagination: 
   enabled: true
