--- a/kraje/karlovarsky/index.html
+++ b/kraje/karlovarsky/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Praha
-description: Praha
+title: Karlovarský kraj
+description: Karlovarský kraj
 keywords: články, aktuality, příspěvky, novinky
 pagination: 
   enabled: true
