--- a/kraje/moravskosleszky/index.html
+++ b/kraje/moravskosleszky/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Praha
-description: Praha
+title: Moravskoslezský kraj
+description: Moravskoslezský kraj
 keywords: články, aktuality, příspěvky, novinky
 pagination: 
   enabled: true
