--- a/kraje/stredocesky/index.html
+++ b/kraje/stredocesky/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Praha
-description: Praha
+title: Středočeský kraj
+description: Středočeský kraj
 keywords: články, aktuality, příspěvky, novinky
 pagination: 
   enabled: true
