--- a/kraje/vysocina/index.html
+++ b/kraje/vysocina/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Praha
-description: Praha
+title: Kraj Vysočina
+description: Kraj Vysočina
 keywords: články, aktuality, příspěvky, novinky
 pagination: 
   enabled: true
