--- a/kraje/zlin/index.html
+++ b/kraje/zlin/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Praha
-description: Praha
+title: Zlínský kraj
+description: Zlínský kraj
 keywords: články, aktuality, příspěvky, novinky
 pagination: 
   enabled: true
