--- a/kraje/index.html
+++ b/kraje/index.html
@@ -1,16 +1,12 @@
 ---
 layout: default
-title: Zápisy
-description: Nejnovější články a příspěvky. Vše podstatné na jednom místě.
+title: Kraje
+description: Kraje
 keywords: články, aktuality, příspěvky, novinky
 pagination: 
   enabled: true
-  #category: porsche
   permalink: /:num/
-
   enabled: true
-
-  tag: koronavirus
   per_page: 12
   permalink: /:num/
   sort_field: 'book:rank'
@@ -24,7 +20,7 @@ pagination:
     <div class="o-section">
       <div class="o-section-inner">
           <header class="c-page-header">
-            <h1 itemprop="headline" class="c-page-title">Aktuality</h1>
+            <h1 itemprop="headline" class="c-page-title">{{ page.title }}</h1>
           </header>
           {% assign posts = paginator.posts %}
           {% for article in posts %}
@@ -35,7 +31,7 @@ pagination:
     </div>
   </div>
   <div class="medium-12 large-4 columns">
-
+aa
 <style>
 
 #cr-map{
