--- a/kraje/kralovehradecky/index.html
+++ b/kraje/kralovehradecky/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Plzeňský kraj
-description: Plzeňský kraj
+title: Olomoucký kraj
+description: Olomoucký kraj
 keywords: články, aktuality, příspěvky, novinky
 pagination: 
   enabled: true
