--- a/kraje/liberecky/index.html
+++ b/kraje/liberecky/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Olomoucký kraj
-description: Olomoucký kraj
+title: Liberecký kraj
+description: Liberecký kraj
 keywords: články, aktuality, příspěvky, novinky
 pagination: 
   enabled: true
