--- a/kraje/pardubicky/index.html
+++ b/kraje/pardubicky/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Olomoucký kraj
-description: Olomoucký kraj
+title: Pardubický kraj
+description: Pardubický kraj
 keywords: články, aktuality, příspěvky, novinky
 pagination: 
   enabled: true
