--- a/aktuality/socialni-dopady/index.html
+++ b/aktuality/socialni-dopady/index.html
@@ -7,7 +7,7 @@ pagination:
   enabled: true
   permalink: /:num/
   enabled: true
-  tag: socialní dopady
+  tag: sociální dopady
   per_page: 12
   permalink: /:num/
   sort_field: 'date'
