--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@ Obsahová stránka a podněty:
 
 {% endcapture %}
 {% capture md %} 
+<div class="medium-12 large">
+<a href="https://budoucnostresimeted.cz/" target="_blank" rel="noopener">Budoucnost řešíme teď</a>
+	<div>
+
 **Vítejte na stránkách, které slouží k rychlému dohledání zdrojů informací o všem, co souvisí s pandemií koronaviru.** 
 
 Kontakty, zprávy, informace, výzvy k pomoci nebo naopak nabídky pomoci se na nás hrnou ze všech stran. Je těžké vybrat ty hlavní nebo ty opravdu užitečné. Je těžké usledovat vše, co se děje. A většinou člověk potřebuje informaci nebo kontakt rychle.
