--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@ Obsahová stránka a podněty:
 
 {% endcapture %}
 {% capture md %} 
-<div class="medium-12 large">
+<div class="medium-12 large-4 columns">
 <a href="https://budoucnostresimeted.cz/" target="_blank" rel="noopener">Budoucnost řešíme teď</a>
-	<div>
+</div>
+	
 
 **Vítejte na stránkách, které slouží k rychlému dohledání zdrojů informací o všem, co souvisí s pandemií koronaviru.** 
 
