--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@ Obsahová stránka a podněty:
 
 {% endcapture %}
 {% capture md %} 
-<div class="medium-12 large-4 columns">
-<a href="https://budoucnostresimeted.cz/" target="_blank" rel="noopener">Budoucnost řešíme teď</a>
-</div>
-	
+
+<h2><a href="https://budoucnostresimeted.cz/" target="_blank" rel="noopener">Budoucnost řešíme teď</a></h2>
+<section class="o-section o-section--spaceBot">
 
 **Vítejte na stránkách, které slouží k rychlému dohledání zdrojů informací o všem, co souvisí s pandemií koronaviru.** 
 
