--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@ Obsahová stránka a podněty:
 
 <b>Vítejte na stránkách, které slouží k rychlému dohledání zdrojů informací o všem, co souvisí s pandemií koronaviru.</b> 
 
-Kontakty, zprávy, informace, výzvy k pomoci nebo naopak nabídky pomoci se na nás hrnou ze všech stran. Je těžké vybrat ty hlavní nebo ty opravdu užitečné. Je těžké usledovat vše, co se děje. A většinou člověk potřebuje informaci nebo kontakt rychle.
+<p>Kontakty, zprávy, informace, výzvy k pomoci nebo naopak nabídky pomoci se na nás hrnou ze všech stran. Je těžké vybrat ty hlavní nebo ty opravdu užitečné. Je těžké usledovat vše, co se děje. A většinou člověk potřebuje informaci nebo kontakt rychle.</p>
 
-Nabízíme <b><a href="https://koronavirus.pirati.cz/rozcestnik/" target="_blank" rel="noopener">rozcestník</a></b>, který vám hledání usnadní - najdete zde hlavní infolinky, důležité telefony na klíčové instituce, odkazy na krizové poradny, které nabízí pomoc a služby spojené s dopady nouzového stavu, odkazy na weby a facebookové stránky, které soustřeďují zájemce o pomoc nebo naopak nabídky pomoci.
+<p>Nabízíme <b><a href="https://koronavirus.pirati.cz/rozcestnik/" target="_blank" rel="noopener">rozcestník</a></b>, který vám hledání usnadní - najdete zde hlavní infolinky, důležité telefony na klíčové instituce, odkazy na krizové poradny, které nabízí pomoc a služby spojené s dopady nouzového stavu, odkazy na weby a facebookové stránky, které soustřeďují zájemce o pomoc nebo naopak nabídky pomoci.</p>
 
-Podívejte se i na <b><a href="https://koronavirus.pirati.cz/reseni/" target="_blank" rel="noopener">návrhy Pirátů</a></b>, jak by věci měly nebo mohly fungovat během krize lépe než nyní! 
+<p>Podívejte se i na <b><a href="https://koronavirus.pirati.cz/reseni/" target="_blank" rel="noopener">návrhy Pirátů</a></b>, jak by věci měly nebo mohly fungovat během krize lépe než nyní!</p> 
 
-<a href="https://www.pirati.cz/vysledky/#type=koronavirus&datefilter6=all" target="_blank" rel="noopener"><strong>Přehled toho nejdůležitějšího, na čem Piráti pracují nejen v Poslanecké sněmovně</strong></a>
+<p><a href="https://www.pirati.cz/vysledky/#type=koronavirus&datefilter6=all" target="_blank" rel="noopener"><strong>Přehled toho nejdůležitějšího, na čem Piráti pracují nejen v Poslanecké sněmovně</strong></a></p>
 
 {% endcapture %}
 
