--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Obsahová stránka a podněty:
 <h2><a href="https://budoucnostresimeted.cz/" target="_blank" rel="noopener">Budoucnost řešíme teď</a></h2>
 <section class="o-section o-section--spaceBot">
 
-<b>Vítejte na stránkách, které slouží k rychlému dohledání zdrojů informací o všem, co souvisí s pandemií koronaviru.</b> 
+<p><b>Vítejte na stránkách, které slouží k rychlému dohledání zdrojů informací o všem, co souvisí s pandemií koronaviru.</b></p> 
 
 <p>Kontakty, zprávy, informace, výzvy k pomoci nebo naopak nabídky pomoci se na nás hrnou ze všech stran. Je těžké vybrat ty hlavní nebo ty opravdu užitečné. Je těžké usledovat vše, co se děje. A většinou člověk potřebuje informaci nebo kontakt rychle.</p>
 
