--- a/en/index.html
+++ b/en/index.html
@@ -27,13 +27,19 @@ keywords: intro, pirates coronavirus, making face masks, video, volunteers
 <a href="/en/"><img src="https://a.pirati.cz/resize/-x30/common/img/flags/gb.png" alt="gb"></a>
 </p>
 
-**Welcome to a website dedicated to quick retrieval of all the information related to the coronavirus pandemic.** 
+<h2><a href="https://zo.pirati.cz/en.html" target="_blank" rel="noopener">THE PIRATE CORONA GUIDE</a></h2>
+<section class="o-section o-section--spaceBot">
 
-We are flooded with contact info, messages, news, calls to help and offers of help from all sides. It is difficult to pick the important ones or the really useful ones. It is hard to keep track of what is going on. And you usually need the information on contact details fast.
+<h2><a href="https://budoucnostresimeted.cz/" target="_blank" rel="noopener">Budoucnost řešíme teď</a></h2>
+<section class="o-section o-section--spaceBot">
 
-We offer this directory to help you with looking up what you need - you can find here the key hotline numbers, important phone contacts to key institutions, links to crisis consultants that offer help and services related to the impacts of the State of Emergency, web links and Facebook pages that aggregate the help that is needed or volunteer offers.
+<p>Welcome to a website dedicated to quick retrieval of all the information related to the coronavirus pandemic.</p> 
 
-More information is included for all interested parties.
+<p>We are flooded with contact info, messages, news, calls to help and offers of help from all sides. It is difficult to pick the important ones or the really useful ones. It is hard to keep track of what is going on. And you usually need the information on contact details fast.</p>
+
+<p>We offer this directory to help you with looking up what you need - you can find here the key hotline numbers, important phone contacts to key institutions, links to crisis consultants that offer help and services related to the impacts of the State of Emergency, web links and Facebook pages that aggregate the help that is needed or volunteer offers.</p>
+
+<p>More information is included for all interested parties.</p>
 
 *What can you find on this website?*
 
