--- a/en/index.html
+++ b/en/index.html
@@ -41,24 +41,22 @@ keywords: intro, pirates coronavirus, making face masks, video, volunteers
 
 <p>More information is included for all interested parties.</p>
 
-*What can you find on this website?*
+<p><b>What can you find on this website?</b></p>
 
-- Current situation and an overview of the measures taken
-- [**directory**](/rozcestnik/) of important phone numbers and information websites
-- [**our solutions**](/reseni/) - suggestions from the Pirate workshop on how we believe things should, or could, work during crisis management of the country
-- [**news**](/aktuality/) - news on what we are working on and what has been accomplished
+<p>Current situation and an overview of the measures taken
+<ul>
+<li><b><a href="https://koronavirus.pirati.cz/rozcestnik/en/" target="_blank" rel="noopener">directory</a></b> of important phone numbers and information websites</li>
+<li><b><a href="https://koronavirus.pirati.cz/reseni/" target="_blank" rel="noopener">our solutions</a>[**our solutions**](/reseni/)</b> - suggestions from the Pirate workshop on how we believe things should, or could, work during crisis management of the country</li>
+<li><b><a href="https://koronavirus.pirati.cz/aktuality/" target="_blank" rel="noopener">news</a>[**news**](/aktuality/)</b> - news on what we are working on and what has been accomplished</li>
+</ul>
 
+<p>We are monitoring and updating the current situation, contact list and proposed solutions on a regular basis.</p>
 
-
-
-We are monitoring and updating the current situation, contact list and proposed solutions on a regular basis.
-
-Suggestions are collected by 
+<p>Suggestions are collected by 
 <a href="mailto:freitas.zuzana@gmail.com?Subject=koronavirus.pirati.cz">Zuzana Freitas Lopesová</a>
-(Assistant to MP Olga Richterová).
-Technical solution: Jitka Novotná
+(Assistant to MP Olga Richterová).</p>
 
-Are you interested in what we do? **[Onboard](https://nalodeni.pirati.cz/) the Pirate ship.** 
+<p>Are you interested in what we do? <b><a href="https://nalodeni.pirati.cz/" target="_blank" rel="noopener">Onboard the Pirate ship</a></b>.</p> 
 {% endcapture %}
 <div class="row">
 	{% if page.article-boxes %}
