--- a/en/index.html
+++ b/en/index.html
@@ -46,8 +46,8 @@ keywords: intro, pirates coronavirus, making face masks, video, volunteers
 <p>Current situation and an overview of the measures taken
 <ul>
 <li><b><a href="https://koronavirus.pirati.cz/rozcestnik/en/" target="_blank" rel="noopener">directory</a></b> of important phone numbers and information websites</li>
-<li><b><a href="https://koronavirus.pirati.cz/reseni/" target="_blank" rel="noopener">our solutions</a>[**our solutions**](/reseni/)</b> - suggestions from the Pirate workshop on how we believe things should, or could, work during crisis management of the country</li>
-<li><b><a href="https://koronavirus.pirati.cz/aktuality/" target="_blank" rel="noopener">news</a>[**news**](/aktuality/)</b> - news on what we are working on and what has been accomplished</li>
+<li><b><a href="https://koronavirus.pirati.cz/reseni/" target="_blank" rel="noopener">our solutions</a></b> - suggestions from the Pirate workshop on how we believe things should, or could, work during crisis management of the country</li>
+<li><b><a href="https://koronavirus.pirati.cz/aktuality/" target="_blank" rel="noopener">news</a></b> - news on what we are working on and what has been accomplished</li>
 </ul>
 
 <p>We are monitoring and updating the current situation, contact list and proposed solutions on a regular basis.</p>
