--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -30,7 +30,7 @@ layout: default
 
 <hr/>
 
-<div class="row" style="text-align: center">
+<div class="row">
   <div class="medium-12 large-12 columns">
 
     <p>MŠMT zmatkuje, otevírání škol provází chaos a nejistota. Navrhujeme tato jasná pravidla.</p>
