--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -73,14 +73,30 @@ layout: default
     <li>Posílení komunikace směrem ke zřizovatelům, školám i rodičům v souvislosti s návratem dětí do škol.</li>
     <li>Jasné nastavení pravidel finanční podpory v souvislosti s obnovením provozu a zajištění hygienických podmínek ve školách.</li>
     </ul>
-    <p>Základní školy</p>
-    <p>Střední školy a konzervatoře</p>
-    <p>Vyšší odborné školy</p>
-    <p>Vysoké školy</p>
-    <p>Základní umělecké školy</p>
 
   </div>
 </div>
+
+<hr/>
+
+<nav class="c-top-sub-nav">
+  <div class="row">
+    <div class="c-top-sub-nav-inner columns" >
+      <div class="c-top-sub-nav__header">
+        <h2 class="c-top-sub-nav__heading">Naše řešení</h2>
+      </div>
+      <div class="c-top-sub-nav-divider">
+      </div>
+      <ul class="c-top-sub-nav-items">
+        <li class="c-top-sub-nav__item "><a href="skoly/zakladni.html">Základní školy</a></li>
+        <li class="c-top-sub-nav__item "><a href="skoly/stredni.html">Střední školy a konzervatoře</a></li>
+        <li class="c-top-sub-nav__item "><a href="skoly/vyssi.html">Vyšší odborné školy</a></li>
+        <li class="c-top-sub-nav__item "><a href="skoly/vysoke.html">Vysoké školy</a></li>
+        <li class="c-top-sub-nav__item "><a href="skoly/umelecke.html">Základní umělecké školy</a></li>
+      </ul>      
+    </div>
+  </div>
+</nav>
 
 <hr/>
 
