--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -70,6 +70,7 @@ layout: default
       <div class="c-top-sub-nav-divider">
       </div>
       <ul class="c-top-sub-nav-items">
+        <li class="c-top-sub-nav__item "><a href="skoly/materske.html">Mateřské školy</a></li>
         <li class="c-top-sub-nav__item "><a href="skoly/zakladni.html">Základní školy</a></li>
         <li class="c-top-sub-nav__item "><a href="skoly/stredni.html">Střední školy a konzervatoře</a></li>
         <li class="c-top-sub-nav__item "><a href="skoly/vyssi.html">Vyšší odborné školy</a></li>
