--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -61,25 +61,56 @@ layout: default
 
 <hr/>
 
-<nav class="c-top-sub-nav">
-  <div class="row">
-    <div class="c-top-sub-nav-inner columns" >
-      <div class="c-top-sub-nav__header">
-        <h2 class="c-top-sub-nav__heading">Naše řešení</h2>
+<div class="row" style="text-align: center">
+  <div class="small-12 medium-2 medium-offset-1 columns">
+    <div class="l-program__priority">
+      <div class="l-program__priority-donut">
+        <a href="zdravotnictvi.html"><img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" /></a>      
       </div>
-      <div class="c-top-sub-nav-divider">
+      <h3><a href="skoly/materske.html">Mateřské školy</a></h3>
+    </div>    
+  </div>  
+  <div class="small-12 medium-2 medium-offset-1 columns">
+    <div class="l-program__priority">
+      <div class="l-program__priority-donut">
+        <a href="zdravotnictvi.html"><img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" /></a>      
       </div>
-      <ul class="c-top-sub-nav-items">
-        <li class="c-top-sub-nav__item "><a href="skoly/materske.html">Mateřské školy</a></li>
-        <li class="c-top-sub-nav__item "><a href="skoly/zakladni.html">Základní školy</a></li>
-        <li class="c-top-sub-nav__item "><a href="skoly/stredni.html">Střední školy a konzervatoře</a></li>
-        <li class="c-top-sub-nav__item "><a href="skoly/vyssi.html">Vyšší odborné školy</a></li>
-        <li class="c-top-sub-nav__item "><a href="skoly/vysoke.html">Vysoké školy</a></li>
-        <li class="c-top-sub-nav__item "><a href="skoly/umelecke.html">Základní umělecké školy</a></li>
-      </ul>      
+      <h3><a href="skoly/zakladni.html">Základní školy</a></h3>
+    </div>    
+  </div>
+  <div class="small-12 medium-2 columns">   
+    <div class="l-program__priority">
+      <div class="l-program__priority-donut">
+        <a href="ekonomika.html"><img src="/assets/img/icons/a02_ekonomika.png" style="padding: 20px" /></a>
+      </div>
+      <h3><a href="skoly/stredni.html">Střední školy a konzervatoře</a></h3>
     </div>
   </div>
-</nav>
+  <div class="small-12 medium-2 columns">   
+    <div class="l-program__priority">
+      <div class="l-program__priority-donut">
+        <a href="exekuce.html"><img src="/assets/img/icons/a01_dluhy.png" style="padding: 20px" /></a>
+      </div>
+      <h3><a href="skoly/vyssi.html">Vyšší odborné školy</a></h3>
+    </div>
+  </div>
+  <div class="small-12 medium-2 columns">   
+    <div class="l-program__priority">
+      <div class="l-program__priority-donut">
+        <a href="socialni-dopady.html"><img src="/assets/img/icons/a01_socialni_dopady.png" style="padding: 20px" /></a>
+      </div>
+      <h3><a href="skoly/vysoke.html">Vysoké školy</a></h3>
+    </div>
+  </div>
+  <div class="small-12 medium-2 columns end">   
+    <div class="l-program__priority">
+      <div class="l-program__priority-donut">
+        <a href="skolstvi.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>
+      </div>
+      <h3><a href="skoly/umelecke.html">Základní umělecké školy</a></h3>
+    </div>
+  </div>
+</div>
 
 <hr/>
 
