--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -65,7 +65,7 @@ layout: default
   <div class="small-12 medium-2 medium-offset-1 columns">
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <a href="zdravotnictvi.html"><img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" /></a>      
+        <a href="skoly/materske.html"><img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" /></a>      
       </div>
       <h3><a href="skoly/materske.html">Mateřské školy</a></h3>
     </div>    
@@ -73,7 +73,7 @@ layout: default
   <div class="small-12 medium-2 medium-offset-1 columns">
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <a href="zdravotnictvi.html"><img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" /></a>      
+        <a href="skoly/zakladni.html"><img src="/assets/img/icons/a01_ochranne_pomucky.png" style="padding: 20px" /></a>      
       </div>
       <h3><a href="skoly/zakladni.html">Základní školy</a></h3>
     </div>    
@@ -81,7 +81,7 @@ layout: default
   <div class="small-12 medium-2 columns">   
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <a href="ekonomika.html"><img src="/assets/img/icons/a02_ekonomika.png" style="padding: 20px" /></a>
+        <a href="skoly/stredni.html"><img src="/assets/img/icons/a02_ekonomika.png" style="padding: 20px" /></a>
       </div>
       <h3><a href="skoly/stredni.html">Střední školy a konzervatoře</a></h3>
     </div>
@@ -89,7 +89,7 @@ layout: default
   <div class="small-12 medium-2 columns">   
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <a href="exekuce.html"><img src="/assets/img/icons/a01_dluhy.png" style="padding: 20px" /></a>
+        <a href="skoly/vyssi.html"><img src="/assets/img/icons/a01_dluhy.png" style="padding: 20px" /></a>
       </div>
       <h3><a href="skoly/vyssi.html">Vyšší odborné školy</a></h3>
     </div>
@@ -97,7 +97,7 @@ layout: default
   <div class="small-12 medium-2 columns">   
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <a href="socialni-dopady.html"><img src="/assets/img/icons/a01_socialni_dopady.png" style="padding: 20px" /></a>
+        <a href="skoly/vysoke.html"><img src="/assets/img/icons/a01_socialni_dopady.png" style="padding: 20px" /></a>
       </div>
       <h3><a href="skoly/vysoke.html">Vysoké školy</a></h3>
     </div>
@@ -105,7 +105,7 @@ layout: default
   <div class="small-12 medium-2 columns end">   
     <div class="l-program__priority">
       <div class="l-program__priority-donut">
-        <a href="skolstvi.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>
+        <a href="skoly/umelecke.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>
       </div>
       <h3><a href="skoly/umelecke.html">Základní umělecké školy</a></h3>
     </div>
