--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -31,7 +31,7 @@ layout: default
 <hr/>
 
 <div class="row">
-  <div class="medium-12 large-12 columns">
+  <div class="columns medium-6">
 
 <p>MŠMT zmatkuje, otevírání škol provází chaos a nejistota. Navrhujeme tato jasná pravidla.</p>
 <p>Shrnutí a naše návrhy na zlepšení</p>
@@ -56,7 +56,6 @@ layout: default
 </ul>
 <p>Nárok na ošetřovné</p>
 <p>V souvislosti s nastavením pravidel pro čerpání ošetřovného byla koordinace a komunikace mezi školstvím, zdravotnictvím a resortem práce a sociálních věcí <a href="https://www.denik.cz/z_domova/skoly-koronavirus-deti-rodice-osetrovne-20200506.html">nedostatečná</a> a rodiče byli dlouho v nejistotě. Teprve 13. května bylo ve Sněmovně <a href="https://www.novinky.cz/domaci/clanek/ano-couvlo-osetrovne-se-snizovat-nebude-cssd-si-prosadila-svou-40323928">rozhodnuto</a>, že nárok na ošetřovné rodiče neztrácí, pokud dítě do školy neumístí z důvodu možnosti ohrožení zdraví dítěte nebo člena domácnosti, z provozních důvodů na straně školy nebo jiných důvodů (např. nemožnost skloubit omezenou školní docházku dítěte se zaměstnáním). Ošetřovné bude možné čerpat zpětně od 1. května.</p>
-
 
   </div>
 </div>
