--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -33,8 +33,8 @@ layout: default
 <div class="row">
   <div class="columns medium-6">
 
-<p>MŠMT zmatkuje, otevírání škol provází chaos a nejistota. Navrhujeme tato jasná pravidla.</p>
-<p>Shrnutí a naše návrhy na zlepšení</p>
+<h3>MŠMT zmatkuje, otevírání škol provází chaos a nejistota. Navrhujeme tato jasná pravidla.</h3>
+<h4>Shrnutí a naše návrhy na zlepšení</h4>
 <p>Ministerstvo školství během prvního květnového víkendu rozeslalo hygienické a bezpečnostní pokyny pro školy v souvislosti s postupným návratem dětí do škol. Pokyny byly připraveny v úzké spolupráci s Ministerstvem zdravotnictví a jeho pracovní skupinou pro řízení uvolňování karanténních opatření. Pokyny pro školy jsou dostupné <a href="http://www.msmt.cz/soubor-hygienickych-pokynu-pro-ms-zs-a-ss">ZDE</a>.</p>
 <ul>
 <li>Pokyny poskytují dostatečný manévrovací prostor pro jednotlivé školy pro nastavení pravidel.   </li>
@@ -45,7 +45,7 @@ layout: default
 <li>Dlouho nebylo jasné, jak to bude s nárokem na ošetřovné. Chybí společná koordinace mezi školstvím, zdravotnictvím a resortem práce a sociálních věcí.</li>
 <li>Není zřejmé, kde školy mohou získat finanční prostředky pro zajištění ochranných pomůcek a zdravotního vybavení.</li>
 </ul>
-<p>Jak bychom to udělali my?</p>
+<h4>Jak bychom to udělali my?</h4>
 <ul>
 <li>V první řadě bychom zveřejnili hygienická a zdravotní kritéria vydaná Ministerstvem zdravotnictví, na jejichž základě by byla zahájena příprava opatření a doporučení pro zřizovatele a školy.</li>
 <li>Ve spolupráci s odbory, zřizovateli a řediteli škol bychom identifikovali rizikové oblasti, pro které musí mít škola i rodiče dostupnou právní oporu a informace o tom, jak postupovat.</li>
@@ -54,7 +54,7 @@ layout: default
 <li>Zaměřili bychom větší pozornost na komunikaci navržených opatření včetně jejich zdůvodnění a na to, aby byly informace k obnovení provozu škol přehledné, srozumitelné a včas dostupné.</li>
 <li>Zpracovali bychom detailní vyhodnocení přechodu škol na online výuku, včetně identifikace rizikových oblastí. Na základě toho bychom nastavili potřebnou podporu školám a připravili scénáře pro případ dalšího omezování provozu škol.</li>
 </ul>
-<p>Nárok na ošetřovné</p>
+<h4>Nárok na ošetřovné</h4>
 <p>V souvislosti s nastavením pravidel pro čerpání ošetřovného byla koordinace a komunikace mezi školstvím, zdravotnictvím a resortem práce a sociálních věcí <a href="https://www.denik.cz/z_domova/skoly-koronavirus-deti-rodice-osetrovne-20200506.html">nedostatečná</a> a rodiče byli dlouho v nejistotě. Teprve 13. května bylo ve Sněmovně <a href="https://www.novinky.cz/domaci/clanek/ano-couvlo-osetrovne-se-snizovat-nebude-cssd-si-prosadila-svou-40323928">rozhodnuto</a>, že nárok na ošetřovné rodiče neztrácí, pokud dítě do školy neumístí z důvodu možnosti ohrožení zdraví dítěte nebo člena domácnosti, z provozních důvodů na straně školy nebo jiných důvodů (např. nemožnost skloubit omezenou školní docházku dítěte se zaměstnáním). Ošetřovné bude možné čerpat zpětně od 1. května.</p>
 
   </div>
