--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -31,7 +31,7 @@ layout: default
 <hr/>
 
 <div class="row">
-  <div class="columns medium-6">
+  <div class="medium-12 large-12 columns">
 
 <h3>MŠMT zmatkuje, otevírání škol provází chaos a nejistota. Navrhujeme tato jasná pravidla.</h3>
 <h4>Shrnutí a naše návrhy na zlepšení</h4>
