--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -40,7 +40,7 @@ layout: default
               <div class="row">
                 <div class="l-prg__content columns medium-12 text-left pull-right">
 
-<h3>MŠMT zmatkuje, otevírání škol provází chaos a nejistota. Navrhujeme tato jasná pravidla.</h3>
+<h3>MŠMT zmatkuje, otevírání škol provází chaos a nejistota.<br>Navrhujeme tato jasná pravidla.</h3>
 <h4>Shrnutí a naše návrhy na zlepšení</h4>
 <p>Ministerstvo školství během prvního květnového víkendu rozeslalo hygienické a bezpečnostní pokyny pro školy v souvislosti s postupným návratem dětí do škol. Pokyny byly připraveny v úzké spolupráci s Ministerstvem zdravotnictví a jeho pracovní skupinou pro řízení uvolňování karanténních opatření. Pokyny pro školy jsou dostupné <a href="http://www.msmt.cz/soubor-hygienickych-pokynu-pro-ms-zs-a-ss">ZDE</a>.</p>
 <ul>
