--- a/reseni/skoly/materske.html
+++ b/reseni/skoly/materske.html
@@ -30,8 +30,15 @@ layout: default
 
 <hr/>
 
-<div class="row">
+<div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-12 text-left pull-right">
 
 <p>Mateřské školy</p>
 <p>Harmonogram uvolňování opatření</p>
@@ -52,46 +59,79 @@ layout: default
 <li>Posílení komunikace směrem ke zřizovatelům, školám i rodičům v souvislosti s návratem dětí do škol.</li>
 <li>Jasné nastavení pravidel finanční podpory v souvislosti s obnovením provozu a zajištěním hygienických podmínek ve školách.</li>
 <li>Připravit doporučení a podporu pro učitele, jak pracovat s dětmi po návratu do mateřských škol, jak jim pomoci s překonáním důsledků korona krize a adaptací. Piráti <a href="https://www.pirati.cz/tiskove-zpravy/podporme-vice-ucitele-pri-navratu-do-skol.html?fbclid=IwAR00Q2_28YR9vVw1WGm7AaMc7GOnN7nCpHjuW5fpdZC8Sbz6Wb7cs5srgN8">podpořili</a> přípravu materiálu, který by učitelům práci s dětmi usnadnil.</li>
-</ul>    
-
+</ul>  
+                </div>
+              </div>
+            </article>         
+          </div>
+        </section>
+      </div>
+    </div>
   </div>
 </div>
 
 <hr/>
 
-              <div class="row">
-                <div class="columns medium-6">
-                  <h3>Co prosazují Piráti:</h3>
+<div class="row" style="text-align: center">	
+  <div class="small-6 medium-2 columns">	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/materske.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>      	
+      </div>	
+      <h3><a href="skoly/materske.html">Mateřské školy</a></h3>	
+    </div>    	
+  </div>  	
+  <div class="small-6 medium-2 columns">	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/zakladni.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>      	
+      </div>	
+      <h3><a href="skoly/zakladni.html">Základní školy</a></h3>	
+    </div>    	
+  </div>	
+  <div class="small-6 medium-2 columns">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/stredni.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/stredni.html">Střední školy a konzervatoře</a></h3>	
+    </div>	
+  </div>	
+  <div class="small-6 medium-2 columns">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/vyssi.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/vyssi.html">Vyšší odborné školy</a></h3>	
+    </div>	
+  </div>	
+  <div class="small-6 medium-2 columns">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/vysoke.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/vysoke.html">Vysoké školy</a></h3>	
+    </div>	
+  </div>	
+  <div class="small-6 medium-2 columns end">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/umelecke.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/umelecke.html">Základní umělecké školy</a></h3>	
+    </div>	
+  </div>	
+</div>	
 
-                  <table>
-                    <tbody>                  
+<hr/>
 
-                    <tr><td>Zachování dvou termínů u přijímacích zkoušek na SŠ</td></tr>
-                    <tr><td>Zachování možnosti odvolání žáka proti rozhodnutí ředitele o žádosti o přijetí na SŠ</td></tr>
-                    <tr><td>Možnost delšího odkladu maturity a závěrečných zkoušek v učebních oborech, nikoliv jejich rychlé rušení</td></tr>
-                    <tr><td>Výukové skupiny pro znevýhodněné žáky</td></tr>
-                    <tr><td>Výpůjčka ICT do sociálně a ekonomicky znevýhodněných rodin</td></tr>
-                    <tr><td>Úprava podmínek a průběhu přijímacích zkoušek na VŠ v době krize</td></tr>
-                    <tr><td>Revize a úprava rozpočtu v oblasti školství</td></tr>
-                    <tr><td>Kontrola smysluplnosti škrtů ve financích na vědu a výzkum</td></tr>
-                    <tr><td>Elektronické zápisy do škol</td></tr>
-                    </tbody>
-                  </table>
-                </div>
-
-                <div class="columns medium-6">
-                <h3>Články k tématu:</h3>
-
-                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","školství"  %}
-
-                  <ul>
-                  {% for post in sorted-posts %}
-                    <li>{{ post.date | date: "%d.%m.%Y" }} - <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
-                  {% endfor %}
-                  </ul>
-                </div>
-              </div>
-
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
               <div class="medium-12 pce-hero__cta">
                   <a class="pce-hero__cta-item button large" href="./">Zpět</a>
               </div>
