--- a/reseni/skoly/materske.html
+++ b/reseni/skoly/materske.html
@@ -40,10 +40,10 @@ layout: default
               <div class="row">
                 <div class="l-prg__content columns medium-12 text-left pull-right">
 
-<p>Mateřské školy</p>
-<p>Harmonogram uvolňování opatření</p>
+<h3>Mateřské školy</h3>
+<h4>Harmonogram uvolňování opatření</h4>
 <p>Mateřské školy nebyly vládou nikdy oficiálně uzavřeny. O jejich provozu stále rozhodují ředitelé škol ve spolupráci se zřizovateli a nesou plnou odpovědnost, včetně případných rizik.</p>
-<p>Rizikové oblasti</p>
+<h4>Rizikové oblasti</h4>
 <ul>
 <li>Zřizovatelé ani školy nedostávají od ministerstva školství průběžné informace, případně se k nim dostávají se zpožděním. Situace je pro školy i rodiče nepřehledná. Informace zveřejněné na webu MŠMT jsou mnohdy nekonkrétní. Informace, které rodiče zajímají, jsou uveřejněny se značným zpožděním nebo zcela chybí (nárok na ošetřovné, jak je to s riziky nákazy a přenosu COVID-19 ve školách apod.).    </li>
 <li>V pokynech nejsou jasně odlišena závazná pravidla od doporučení.</li>
@@ -52,7 +52,7 @@ layout: default
 <li>Pokyny neřeší případný návrat dítěte do mateřské školy, pokud se podezření na COVID-19 neprokáže (test bude negativní, dítě nebude vykazovat příznaky).</li>
 <li>Chybí podpora učitelů v práci s dětmi po návratu do mateřských škol a jejich adaptací v důsledku korona krize.</li>
 </ul>
-<p>Doporučení</p>
+<h4>Doporučení</h4>
 <ul>
 <li>Sjednocení nebo řádné zdůvodnění pravidel pro mateřské, základní a střední školy (počet dětí ve skupině).    </li>
 <li>Jasné odlišení závazných pravidel od doporučení a vymezení odpovědnosti školy i rodiče.</li>
