--- a/reseni/skoly/umelecke.html
+++ b/reseni/skoly/umelecke.html
@@ -30,14 +30,21 @@ layout: default
 
 <hr/>
 
-<div class="row">
+<div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-12 text-left pull-right">
 
-<p>Základní umělecké školy</p>
-<p>Harmonogram uvolňování opatření</p>
+<h3>Základní umělecké školy</h3>
+<h4>Harmonogram uvolňování opatření</h4>
 <p>S obnovením osobní přítomnosti žáků základních uměleckých škol se počítá od 11. května 2020. Žáci budou rozděleni do školních skupin o velikosti maximálně 15 žáků.</p>
 <p>Aktuálně je platné <a href="https://www.mzcr.cz/dokumenty/mimoradne-opatreni-omezeni-provozu-skol-a-skolskych-zarizeni-od-185do-25_19223_4135_1.html">mimořádné opatření</a> Ministerstva zdravotnictví ze dne 15. května 2020 s účinností od 18. května 2020.</p>
-<p>Rizikové oblasti</p>
+<h4>Rizikové oblasti</h4>
 <ul>
 <li>V pokynech nejsou jasně odlišena závazná pravidla od doporučení.</li>
 <li>Od začátku chybí jasné nastavení pracovněprávních vztahů se zaměstnanci škol, kteří spadají do rizikové skupiny (možnost poskytnutí neplaceného volna). Teprve po kritice ze strany <a href="https://skolskeodbory.cz/skolska-tripartita-bude-jednat-o-opatrenich-ve-skolstvi-kvuli-koronaviru">školských odborů</a> vznikl <a href="https://skolskeodbory.cz/pracovne-pravni-zalezitosti-zamestnancu-skol?fbclid=IwAR09UbA9mkJKmsH79U8vpAh3D6ZsB1Bc_V5cPI9tjLjx0cuywGZ-e0qxqBI">materiál</a>, který podmínky blíže specifikuje.</li>
@@ -46,54 +53,85 @@ layout: default
 <li>Třídy na základních uměleckých školách nebývají příliš velké. Může tedy nastat problém v dodržování rozestupů mezi žáky a učitelem.</li>
 <li>Ačkoliv jsou od 11. května 2020 povoleny koncerty do 100 lidí, základní umělecké školy nemohou ve svých sálech pořádat například absolventské koncerty či besídky z důvodu zákazu osobní přítomnosti rodičů v prostorách školy.</li>
 </ul>
-<p>Doporučení</p>
+<h4>Doporučení</h4>
 <ul>
 <li>Jasné odlišení závazných pravidel od doporučení a vymezení odpovědnosti školy i rodiče.</li>
 <li>Povolit konání koncertů a dalších kulturních akcí v sálech základních uměleckých škol při dodržování vládou stanovených opatření a hygienických pravidel.</li>
 <li>Jasné nastavení pravidel finanční podpory v souvislosti s obnovením provozu a zajištěním hygienických podmínek ve školách.</li>
-</ul>
-
-
-
-
+</ul>                  
+                  
+                </div>
+              </div>
+            </article>         
+          </div>
+        </section>
+      </div>
+    </div>
   </div>
 </div>
 
 <hr/>
 
-              <div class="row">
-                <div class="columns medium-6">
-                  <h3>Co prosazují Piráti:</h3>
+<div class="row" style="text-align: center">	
+  <div class="small-6 medium-2 columns">	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/materske.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>      	
+      </div>	
+      <h3><a href="skoly/materske.html">Mateřské školy</a></h3>	
+    </div>    	
+  </div>  	
+  <div class="small-6 medium-2 columns">	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/zakladni.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>      	
+      </div>	
+      <h3><a href="skoly/zakladni.html">Základní školy</a></h3>	
+    </div>    	
+  </div>	
+  <div class="small-6 medium-2 columns">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/stredni.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/stredni.html">Střední školy a konzervatoře</a></h3>	
+    </div>	
+  </div>	
+  <div class="small-6 medium-2 columns">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/vyssi.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/vyssi.html">Vyšší odborné školy</a></h3>	
+    </div>	
+  </div>	
+  <div class="small-6 medium-2 columns">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/vysoke.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/vysoke.html">Vysoké školy</a></h3>	
+    </div>	
+  </div>	
+  <div class="small-6 medium-2 columns end">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/umelecke.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/umelecke.html">Základní umělecké školy</a></h3>	
+    </div>	
+  </div>	
+</div>	
 
-                  <table>
-                    <tbody>                  
+<hr/>
 
-                    <tr><td>Zachování dvou termínů u přijímacích zkoušek na SŠ</td></tr>
-                    <tr><td>Zachování možnosti odvolání žáka proti rozhodnutí ředitele o žádosti o přijetí na SŠ</td></tr>
-                    <tr><td>Možnost delšího odkladu maturity a závěrečných zkoušek v učebních oborech, nikoliv jejich rychlé rušení</td></tr>
-                    <tr><td>Výukové skupiny pro znevýhodněné žáky</td></tr>
-                    <tr><td>Výpůjčka ICT do sociálně a ekonomicky znevýhodněných rodin</td></tr>
-                    <tr><td>Úprava podmínek a průběhu přijímacích zkoušek na VŠ v době krize</td></tr>
-                    <tr><td>Revize a úprava rozpočtu v oblasti školství</td></tr>
-                    <tr><td>Kontrola smysluplnosti škrtů ve financích na vědu a výzkum</td></tr>
-                    <tr><td>Elektronické zápisy do škol</td></tr>
-                    </tbody>
-                  </table>
-                </div>
-
-                <div class="columns medium-6">
-                <h3>Články k tématu:</h3>
-
-                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","školství"  %}
-
-                  <ul>
-                  {% for post in sorted-posts %}
-                    <li>{{ post.date | date: "%d.%m.%Y" }} - <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
-                  {% endfor %}
-                  </ul>
-                </div>
-              </div>
-
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
               <div class="medium-12 pce-hero__cta">
                   <a class="pce-hero__cta-item button large" href="./">Zpět</a>
               </div>
