--- a/reseni/skoly/vyssi.html
+++ b/reseni/skoly/vyssi.html
@@ -30,64 +30,105 @@ layout: default
 
 <hr/>
 
-<div class="row">
+<div class="row" style="text-align: center">
   <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
+              <div class="row">
+                <div class="l-prg__content columns medium-12 text-left pull-right">
 
-<p>Vyšší odborné školy</p>
-<p>Harmonogram uvolňování opatření</p>
+<h3>Vyšší odborné školy</h3>
+<h4>Harmonogram uvolňování opatření</h4>
 <p>Výuka na vyšších odborných školách je umožněna od 11. května za účelem přípravy k závěrečným zkouškám (absolutorium). Příprava žáků ke zkouškám probíhá ve školních skupinách o velikosti maximálně 15 žáků (bez možnosti měnit složení skupin).</p>
 <p>Aktuálně je platné <a href="https://www.mzcr.cz/dokumenty/mimoradne-opatreni-omezeni-provozu-skol-a-skolskych-zarizeni-od-185do-25_19223_4135_1.html">mimořádné opatření</a> Ministerstva zdravotnictví ze dne 15. května 2020 s účinností od 18. května 2020.</p>
-<p>Rizikové oblasti</p>
+<h4>Rizikové oblasti</h4>
 <ul>
 <li>Jasné odlišení závazných pravidel od doporučení a vymezení odpovědnosti školy i studentů nebo jejich rodičů.</li>
 <li>Web MŠMT je pro vyšší odborné školy neaktuální, ředitelé škol ani studenti nemají k dispozici informace na jednom místě.</li>
 <li>U vyšších odborných škol dochází k dlouhodobému poklesu v počtu studentů, který může být v důsledku současné situace ještě výraznější (na vysokých školách bude volná kapacita kvůli menšímu počtu zahraničních žáků hlásících se do 1. ročníků). Dopady korona krize tak mohou být pro některé školy likvidační.</li>
 </ul>
-<p>Doporučení</p>
+<h4>Doporučení</h4>
 <ul>
 <li>Posílení komunikace k ředitelům vyšších odborných škol a individuální přístup k nim.</li>
 <li>Jasné nastavení pravidel finanční podpory v souvislosti s obnovením provozu a zajištění hygienických podmínek ve školách.</li>
 <li>Příprava “záchranného” programu (metodická a finanční podpora) pro vyšší odborné školy, které budou čelit výraznému úbytku studentů.</li>
 </ul>
-
+                  
+                </div>
+              </div>
+            </article>         
+          </div>
+        </section>
+      </div>
+    </div>
   </div>
 </div>
 
 <hr/>
 
-              <div class="row">
-                <div class="columns medium-6">
-                  <h3>Co prosazují Piráti:</h3>
+<div class="row" style="text-align: center">	
+  <div class="small-6 medium-2 columns">	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/materske.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>      	
+      </div>	
+      <h3><a href="skoly/materske.html">Mateřské školy</a></h3>	
+    </div>    	
+  </div>  	
+  <div class="small-6 medium-2 columns">	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/zakladni.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>      	
+      </div>	
+      <h3><a href="skoly/zakladni.html">Základní školy</a></h3>	
+    </div>    	
+  </div>	
+  <div class="small-6 medium-2 columns">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/stredni.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/stredni.html">Střední školy a konzervatoře</a></h3>	
+    </div>	
+  </div>	
+  <div class="small-6 medium-2 columns">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/vyssi.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/vyssi.html">Vyšší odborné školy</a></h3>	
+    </div>	
+  </div>	
+  <div class="small-6 medium-2 columns">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/vysoke.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/vysoke.html">Vysoké školy</a></h3>	
+    </div>	
+  </div>	
+  <div class="small-6 medium-2 columns end">   	
+    <div class="l-program__priority">	
+      <div class="l-program__priority-donut">	
+        <a href="skoly/umelecke.html"><img src="/assets/img/icons/a01_skolstvi.png" style="padding: 20px" /></a>	
+      </div>	
+      <h3><a href="skoly/umelecke.html">Základní umělecké školy</a></h3>	
+    </div>	
+  </div>	
+</div>	
 
-                  <table>
-                    <tbody>                  
+<hr/>
 
-                    <tr><td>Zachování dvou termínů u přijímacích zkoušek na SŠ</td></tr>
-                    <tr><td>Zachování možnosti odvolání žáka proti rozhodnutí ředitele o žádosti o přijetí na SŠ</td></tr>
-                    <tr><td>Možnost delšího odkladu maturity a závěrečných zkoušek v učebních oborech, nikoliv jejich rychlé rušení</td></tr>
-                    <tr><td>Výukové skupiny pro znevýhodněné žáky</td></tr>
-                    <tr><td>Výpůjčka ICT do sociálně a ekonomicky znevýhodněných rodin</td></tr>
-                    <tr><td>Úprava podmínek a průběhu přijímacích zkoušek na VŠ v době krize</td></tr>
-                    <tr><td>Revize a úprava rozpočtu v oblasti školství</td></tr>
-                    <tr><td>Kontrola smysluplnosti škrtů ve financích na vědu a výzkum</td></tr>
-                    <tr><td>Elektronické zápisy do škol</td></tr>
-                    </tbody>
-                  </table>
-                </div>
-
-                <div class="columns medium-6">
-                <h3>Články k tématu:</h3>
-
-                  {% assign sorted-posts = site.posts | sort: 'date' | reverse | where: "tags","školství"  %}
-
-                  <ul>
-                  {% for post in sorted-posts %}
-                    <li>{{ post.date | date: "%d.%m.%Y" }} - <a class="c-headline-anchor" href="{{ post.url | relative_url }}" itemprop="url">{{ post.title }}</a></li>
-                  {% endfor %}
-                  </ul>
-                </div>
-              </div>
-
+<div class="row" style="text-align: center">
+  <div class="medium-12 large-12 columns">
+    <div class="row" style="text-align: center">
+      <div class="medium-12 large-12 columns">
+        <section class="o-section o-section--spaceBot">
+          <div class="o-section-inner o-section-inner--leftBlock">
+            <article class="l-prg__card">
               <div class="medium-12 pce-hero__cta">
                   <a class="pce-hero__cta-item button large" href="./">Zpět</a>
               </div>
