--- a/reseni/skolstvi2.html
+++ b/reseni/skolstvi2.html
@@ -64,6 +64,11 @@ layout: default
 <h4>Nárok na ošetřovné</h4>
 <p>V souvislosti s nastavením pravidel pro čerpání ošetřovného byla koordinace a komunikace mezi školstvím, zdravotnictvím a resortem práce a sociálních věcí <a href="https://www.denik.cz/z_domova/skoly-koronavirus-deti-rodice-osetrovne-20200506.html">nedostatečná</a> a rodiče byli dlouho v nejistotě. Teprve 13. května bylo ve Sněmovně <a href="https://www.novinky.cz/domaci/clanek/ano-couvlo-osetrovne-se-snizovat-nebude-cssd-si-prosadila-svou-40323928">rozhodnuto</a>, že nárok na ošetřovné rodiče neztrácí, pokud dítě do školy neumístí z důvodu možnosti ohrožení zdraví dítěte nebo člena domácnosti, z provozních důvodů na straně školy nebo jiných důvodů (např. nemožnost skloubit omezenou školní docházku dítěte se zaměstnáním). Ošetřovné bude možné čerpat zpětně od 1. května.</p>
 
+                  
+<p>Za analytický tým Pirátského Resortního týmu školství koordinoval:<br>
+Martin Úlovec, <a href="mailto:martin.ulovec@pirati.cz">martin.ulovec@pirati.cz</a>, tel: 724 944 309<br>
+Za přispění jeho členů a dalších odborníků: Lukáš Bartoň, Lenka Kozlová, Ondřej Chrást, Daniel Mazur, Júsuf Traore, Petr Chaluš, Jan Hrubeš, Vít Šnajdr, Arnošt Žídek</p>
+                  
             </article>         
           </div>
         </section>
