--- a/reseni/skoly/vysoke.html
+++ b/reseni/skoly/vysoke.html
@@ -135,7 +135,7 @@ layout: default
           <div class="o-section-inner o-section-inner--leftBlock">
             <article class="l-prg__card">
               <div class="medium-12 pce-hero__cta">
-                  <a class="pce-hero__cta-item button large" href="./">Zpět</a>
+                  <a class="pce-hero__cta-item button large" href="../skolstvi.html">Zpět</a>
               </div>
             </article>         
           </div>
